<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="mainSentences">"Reminder For You"</string>
    <string name="profile">profile</string>
    <string name="Symptoms">Symptoms</string>
    <string name="lovePartner">Love partner</string>
    <string name="AboutUs">About us</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="theRules">Rules</string>
    <string name="Confirm">Confirm</string>
    <string name="HelpSetUpReminders">Help set up reminders</string>
    <string name="Daily">IDo</string>
    <string name="Reminder">AirDrop</string>
    <string name="DarkMode">Dark mode</string>
    <string name="BrightMode">Light mode</string>
    <string name="saved">Saved</string>
    <string name="ChangeTheCourse">Change info</string>
    <string name="RelationshipWithLiomBanoo">Contacts us</string>
    <string name="LearnNotifications">notifications</string>
    <string name="NotificationOfEvents">Notification of events</string>
    <string name="Share">Share</string>
    <string name="Next">Next</string>
    <string name="Previous">Previous</string>
    <string name="Notes">Notes</string>
    <string name="ReminderDesc1">Setting the reminder consumes more battery power, and</string>
    <string name="ReminderDesc2">We also need a license for a better displayy</string>
    <string name="submitInformation">submit information</string>
    <string name="LogIn2">LogIn</string>
    <string name="Logout">Logout</string>
    <string name="ToDay">Today</string>
    <string name="DateQuestDesc1">Knowing this information, we can better predict the next period</string>
    <string name="SettingTheReminderConsumesMoreBatteryPowerAnd">Setting the reminder consumes more battery power, and</string>
    <string name="Registration">save</string>
    <string name="NewReminder">New</string>
    <string name="OK">OK</string>
    <string name="notNow">"not now "</string>
    <string name="ReminderTopic">Reminder topic</string>
    <string name="writeHere">write here</string>
    <string name="SetTheTime">Set the time</string>
    <string name="SetTheDate">Set the date</string>
    <string name="RepeatWeekly">Repeat weekly</string>
    <string name="DetermineTheDays">Determine the days</string>
    <string name="ReminderDesc3">Dear,  in order to be able to remind you better, we need you to give us access to the show , of course, this is completely arbitrary.</string>
    <string name="TxtShare1">"Hello my good friend, liom bano can help you for a batter and happier life. "</string>
    <string name="TxtShare2">"You can download it from the address below "</string>
    <string name="app_name">Airdrop Reminder</string>

    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="ReminderDate">Reminder date</string>
    <string name="ReminderTime">Reminder time</string>
    <string name="connected1">Please make sure the internet is connected</string>
    <string name="values2">Please enter the month or day values correctly</string>
    <string name="reminders">For the past days that do not record reminders</string>
    <string name="reminderSaved">Success reminder saved</string>
    <string name="codeCopied">code copied</string>
    <string name="Desc">Description</string>
    <string name="spam">"if you didn't recive the code , check spams too"</string>
</resources>