<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relMainDrawer"
        android:background="#f6fafb"
        android:layout_marginLeft="@dimen/_80sdp"
        android:elevation="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
        android:fadeScrollbars="true"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@drawable/shape_cerv_sorme"
        android:scrollbars="vertical"
        android:paddingBottom="@dimen/_10sdp"
        android:id="@+id/linDrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnLogin"
        android:layout_alignParentRight="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/_10sdp"
            android:clickable="true"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_25sdp">

            <RelativeLayout
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:id="@+id/imgIconClose"
                    android:layout_width="@dimen/_9sdp"
                    android:layout_height="@dimen/_9sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/txtTop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:layout_toLeftOf="@id/imgIconClose"
                    android:text="@string/app_name"
                    android:textColor="?attr/DrakBlueWhite"
                    android:textSize="@dimen/_15sdp" />



            </RelativeLayout>













            <!-- about us -->
            <LinearLayout
                android:id="@+id/relPrivacy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:gravity="center_horizontal"
                    android:shadowColor="#44000000"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/PrivacyPolicy"
                    android:textColor="?attr/DrakBlueWhite"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/imgPrivacy"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/rules" />


            </LinearLayout>
            <!--    BuyPermium        -->
            <LinearLayout
                android:id="@+id/relBuyPermium"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:gravity="right|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:gravity="center_horizontal"
                    android:shadowColor="#44000000"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="Buy Permium Account"
                    android:textColor="?attr/DrakBlueWhite"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:id="@+id/imgBuyPermium"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:src="@drawable/ic_shoppingcart" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

        <ImageView
            android:layout_alignBottom="@+id/linDrawer"
            android:id="@+id/imgFadeBot"
            android:layout_width="match_parent"
            android:scaleY="-1"
            android:layout_height="@dimen/_10sdp"
            />


    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:background="#17bd79"
        android:gravity="center"
        android:text="@string/LogIn2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>