<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/relHeader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp">

        <!--         right -->
        <ImageView
            android:id="@+id/relRight"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/_10sdp"
            android:paddingLeft="@dimen/_4sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:src="@drawable/ic_drawer" />



        <TextView
            android:id="@+id/txtLeft"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_21sdp"
            android:text="@string/HelpSetUpReminders"
            android:paddingRight="@dimen/_7sdp"
            android:paddingLeft="@dimen/_7sdp"
            android:textColor="@android:color/white"
            android:elevation="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_4sdp"
            android:paddingBottom="@dimen/_4sdp"
            android:gravity="center"
            android:textSize="@dimen/_10sdp"
            android:background="@drawable/shape_btn_green"
            />

        <ImageView
            android:id="@+id/imgShareList"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_toRightOf="@id/txtLeft"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:background="@drawable/circle_blue_2"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_fi_rr_share"
            />

    </RelativeLayout>
    <TextView
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_25sdp"
        android:id="@+id/TextPermiumWait"
        android:layout_below="@id/relParentTabHistory"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/_9sdp"
        android:background="@drawable/shape_orange_permium"
        android:text="Wait for accept your buy"
        android:gravity="center"
        android:textColor="#f39c12"
        android:elevation="@dimen/_3sdp"
        android:visibility="gone"
        />
    <RelativeLayout
        android:layout_below="@+id/relHeader"
        android:id="@+id/relParentTabHistory"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:elevation="@dimen/_10sdp"
        android:background="?attr/shape_cerv4"
        >

        <!-- center seprator-->
        <View
            android:id="@+id/imgCenter"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerInParent="true" />
        <!--         bg -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_centerInParent="true"
            android:background="?attr/shape_cerv4"
            />

        <!-- movement bg -->
        <ImageView
            android:id="@+id/txtWalk"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/_4sdp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/imgCenter"
            android:background="@drawable/banafsh_cerv_5"
            android:gravity="center"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/txtDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/imgCenter"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/Daily"
            android:textColor="?attr/whiteBlue"
            android:textSize="@dimen/_15sdp" />


        <TextView
            android:id="@+id/txtRemember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/imgCenter"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/Reminder"
            android:textColor="?attr/whiteBlue"
            android:textSize="@dimen/_15sdp" />


    </RelativeLayout>

    <com.diacoipj.airdropreminder.Setting.WrapViewPager
        android:id="@+id/viewPagerForum"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/relAds"
        android:layout_below="@+id/TextPermiumWait"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp">

    </com.diacoipj.airdropreminder.Setting.WrapViewPager>

    <RelativeLayout
        android:id="@+id/relAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        >
        <RelativeLayout
            android:id="@+id/relAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/_2sdp"/>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-1813199817095629/6040361523"/>
        
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/relProgress"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:indeterminateDrawable="@drawable/progress_bar_draw"
            android:max="150"
            android:progress="10"
            android:progressDrawable="@drawable/progress_bar_draw"
            android:theme="@style/RedProgress"
            android:visibility="visible" />
        <TextView
            android:visibility="gone"
            android:id="@+id/btnRtry"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_35sdp"
            android:text="retry"
            android:textColor="#ffffff"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:background="@drawable/shape_redbtn"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:visibility="gone" />

</RelativeLayout>